--- a/udagram-frontend/package.json
+++ b/udagram-frontend/package.json
@@ -26,6 +26,7 @@
     "@ionic/angular": "^4.1.0",
     "@ionic/cli": "^6.16.3",
     "core-js": "^2.5.4",
+    "eslint": "^8.43.0",
     "fsevents": "^2.3.2",
     "rxjs": "~6.5.4",
     "zone.js": "~0.9.1"
