--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   reverseproxy:
-      image: reverseproxy
+      image: reverseproxy:v4a
       ports:
           - 8080:8080
       restart: always
@@ -9,31 +9,31 @@ services:
         - backend-user
         - backend-feed
   backend-user:
-    image: udagram-api-user
+    image: udagram-api-user:v4a
     environment:
-      POSTGRES_USERNAME: postgres
-      POSTGRES_PASSWORD: "12345678"
-      POSTGRES_DB: postgres
-      POSTGRES_HOST: cloud-dev-prj3-psql.co6xjlda6j6k.us-east-1.rds.amazonaws.com
-      AWS_REGION: us-east-1
-      AWS_PROFILE: default
-      AWS_BUCKET: arn:aws:s3:::cloud-dev-prj3-s3
-      JWT_SECRET: testing
-      URL: "http://localhost:8102"
+      POSTGRES_USERNAME: $POSTGRES_USERNAME
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD 
+      POSTGRES_DB: $POSTGRES_DB 
+      POSTGRES_HOST: $POSTGRES_HOST
+      AWS_REGION: $AWS_REGION 
+      AWS_PROFILE: $AWS_PROFILE 
+      AWS_BUCKET: $AWS_BUCKET
+      JWT_SECRET: $JWT_SECRET
+      URL: "http://localhost:8100"
   backend-feed:
-    image: udagram-api-feed
+    image: udagram-api-feed:v4a
     volumes:
       - $HOME/.aws:/root/.aws
     environment:
-      POSTGRES_USERNAME: postgres
-      POSTGRES_PASSWORD: "12345678"
-      POSTGRES_DB: postgres
-      POSTGRES_HOST: cloud-dev-prj3-psql.co6xjlda6j6k.us-east-1.rds.amazonaws.com
-      AWS_REGION: us-east-1
-      AWS_PROFILE: default
-      AWS_BUCKET: arn:aws:s3:::cloud-dev-prj3-s3
-      JWT_SECRET: testing
-      URL: "http://localhost:8101"
+      POSTGRES_USERNAME: $POSTGRES_USERNAME
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD 
+      POSTGRES_DB: $POSTGRES_DB
+      POSTGRES_HOST: $POSTGRES_HOST
+      AWS_REGION: $AWS_REGION
+      AWS_PROFILE: $AWS_PROFILE 
+      AWS_BUCKET: $AWS_BUCKET
+      JWT_SECRET: $JWT_SECRET
+      URL: "http://localhost:8100"
   frontend:
     image: udagram-frontend:local
     ports:
