--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
 ## Assuming the .travis.yml file is in the project directory, and there is a separate sub-directory for each service
 ## Use either `docker-compose` or individual `docker build` commands
 ## Build
+language: node_js
+node_js:
+  - 12
+services:
+  - docker
+install:
+  - echo "nothing needs to be installed"
+before_script:
+  - echo "no tests. Yes there will be tests"
 script:
   - docker build -t udagram-api-feed ./udagram-api-feed
   - docker build -t udagram-api-user ./udagram-api-user
@@ -11,8 +20,6 @@ script:
   - docker tag udagram-api-user tran-cam-long/udagram-api-user:v1
   - docker tag udagram-frontend tran-cam-long/udagram-frontend:v1
   - docker tag udagram-reverseproxy tran-cam-long/udagram-reverseproxy:v1
-
-  ```bash
 ## Push
 
 after_success:
