--- a/.travis.yml
+++ b/.travis.yml
@@ -16,16 +16,16 @@ script:
   - docker build -t udagram-frontend ./udagram-frontend
   - docker build -t udagram-reverseproxy ./udagram-reverseproxy
 ## Tagging
-  - docker tag udagram-api-feed tran-cam-long/udagram-api-feed:v1
-  - docker tag udagram-api-user tran-cam-long/udagram-api-user:v1
-  - docker tag udagram-frontend tran-cam-long/udagram-frontend:v1
-  - docker tag udagram-reverseproxy tran-cam-long/udagram-reverseproxy:v1
+  - docker tag udagram-api-feed camlongtran/udagram-api-feed:v1c
+  - docker tag udagram-api-user camlongtran/udagram-api-user:v1
+  - docker tag udagram-frontend camlongtran/udagram-frontend:v1
+  - docker tag udagram-reverseproxy camlongtran/udagram-reverseproxy:v1
 ## Push
 
 after_success:
 ## Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push tran-cam-long/udagram-api-feed:v1
-  - docker push tran-cam-long/udagram-api-user:v1
-  - docker push tran-cam-long/udagram-frontend:v1
-  - docker push tran-cam-long/udagram-reverseproxy:v1
+  - docker push camlongtran/udagram-api-feed:v1
+  - docker push camlongtran/udagram-api-user:v1
+  - docker push camlongtran/udagram-frontend:v1
+  - docker push camlongtran/udagram-reverseproxy:v1
