--- a/configurations/backend-feed-service.yaml
+++ b/configurations/backend-feed-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: backend-feed
   labels:
-    app: backend-feed
+    service: backend-feed
 
 spec:
   ports:
@@ -11,4 +11,4 @@ spec:
     port: 8080
     targetPort: 8080
   selector:
-    app: backend-feed
+    service: backend-feed
