--- a/configurations/env-configmap.yaml
+++ b/configurations/env-configmap.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 data:
-  AWS_BUCKET: arn:aws:s3:::cloud-dev-prj3-s3
+  AWS_BUCKET: arn:aws:s3:::longtc1-prj3-s3
   AWS_PROFILE: default
   AWS_REGION: us-east-1
   POSTGRES_DB: postgres
-  POSTGRES_HOST: cloud-dev-prj3-psql.co6xjlda6j6k.us-east-1.rds.amazonaws.com
-  URL: http://a69ae37495540420cb336690b083e22c-691690807.us-east-2.elb.amazonaws.com:8100
+  POSTGRES_HOST: longtc1-prj3-postgres.co6xjlda6j6k.us-east-1.rds.amazonaws.com
+  URL: http://localhost:8100
+  JWT_SECRET: testing
 metadata:
   name: env-configmap
