--- a/configurations/frontend-service.yaml
+++ b/configurations/frontend-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: frontend
   labels:
-    app: frontend
+    service: frontend
 
 spec:
   ports:
@@ -12,4 +12,4 @@ spec:
     targetPort: 80
     protocol: TCP
   selector:
-    app: frontend
+    service: frontend
