--- a/configurations/reverseproxy-service.yaml
+++ b/configurations/reverseproxy-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: reverseproxy
   labels:
-    app: reverseproxy
+    service: reverseproxy
 
 spec:
   ports:
@@ -11,4 +11,4 @@ spec:
     port: 8080
     targetPort: 8080
   selector:
-    app: reverseproxy
+    service: reverseproxy
